generated-out/vanilla/dear-imgui-raw-vanilla-internal/cbits/DearImGuiWrappers.h

int ImGui_PlotEx_wrap(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* size_arg);
void ImGui_RenderColorComponentMarker_wrap(ImRect const* bb, ImU32 col, float rounding);
void ImGui_RenderColorRectWithAlphaCheckerboard_wrap(ImDrawList* draw_list, ImVec2 const* p_min, ImVec2 const* p_max, ImU32 fill_col, float grid_step, ImVec2 const* grid_off, float rounding, ImDrawFlags flags);
void ImGui_RenderDragDropTargetRectEx_wrap(ImDrawList* draw_list, ImRect const* bb);
void ImGui_RenderDragDropTargetRectForItem_wrap(ImRect const* bb);
void ImGui_RenderFrame_wrap(ImVec2 const* p_min, ImVec2 const* p_max, ImU32 fill_col, bool borders, float rounding);
void ImGui_RenderFrameBorder_wrap(ImVec2 const* p_min, ImVec2 const* p_max, float rounding);
void ImGui_RenderMouseCursor_wrap(ImVec2 const* pos, float scale, ImGuiMouseCursor mouse_cursor, ImU32 col_fill, ImU32 col_border, ImU32 col_shadow);
void ImGui_RenderNavCursor_wrap(ImRect const* bb, ImGuiID id, ImGuiNavRenderCursorFlags flags);
void ImGui_RenderNavHighlight_wrap(ImRect const* bb, ImGuiID id, ImGuiNavRenderCursorFlags flags);
void ImGui_RenderRectFilledInRangeH_wrap(ImDrawList* draw_list, ImRect const* rect, ImU32 col, float fill_x0, float fill_x1, float rounding);
void ImGui_RenderRectFilledWithHole_wrap(ImDrawList* draw_list, ImRect const* outer, ImRect const* inner, ImU32 col, float rounding);
void ImGui_RenderText_wrap(ImVec2 const* pos, const char* text, const char* text_end, bool hide_text_after_hash);
void ImGui_RenderTextClipped_wrap(ImVec2 const* pos_min, ImVec2 const* pos_max, const char* text, const char* text_end, const ImVec2* text_size_if_known, ImVec2 const* align, const ImRect* clip_rect);
void ImGui_RenderTextClippedWithDrawList_wrap(ImDrawList* draw_list, ImVec2 const* pos_min, ImVec2 const* pos_max, const char* text, const char* text_end, const ImVec2* text_size_if_known, ImVec2 const* align, const ImRect* clip_rect);
void ImGui_RenderTextEllipsis_wrap(ImDrawList* draw_list, ImVec2 const* pos_min, ImVec2 const* pos_max, float ellipsis_max_x, const char* text, const char* text_end, const ImVec2* text_size_if_known);
void ImGui_RenderTextWrapped_wrap(ImVec2 const* pos, const char* text, const char* text_end, float wrap_width);
void ImGui_ScrollToBringRectIntoView_wrap(ImGuiWindow* window, ImRect const* rect);
void ImGui_ScrollToRect_wrap(ImGuiWindow* window, ImRect const* rect, ImGuiScrollFlags flags);
void ImGui_ScrollToRectEx_wrap(ImGuiWindow* window, ImRect const* rect, ImGuiScrollFlags flags, ImVec2* _out);
bool ImGui_ScrollbarEx_wrap(ImRect const* bb, ImGuiID id, ImGuiAxis axis, ImS64* p_scroll_v, ImS64 avail_v, ImS64 contents_v, ImDrawFlags draw_rounding_flags);