generated-out/vanilla/dear-imgui-raw-vanilla-internal/src/DearImGui/Raw/Internal/ImGui.hsc


foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderColorComponentMarker_wrap"
  c_imGui_RenderColorComponentMarker :: (Ptr ImRect) -> ImU32 -> CFloat -> IO ()

imGui_RenderColorComponentMarker :: ImRect -> ImU32 -> CFloat -> IO ()
imGui_RenderColorComponentMarker bb col rounding =
  with bb $ \_p0 -> c_imGui_RenderColorComponentMarker _p0 col rounding

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderColorRectWithAlphaCheckerboard_wrap"
  c_imGui_RenderColorRectWithAlphaCheckerboard :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> CFloat -> (Ptr ImVec2) -> CFloat -> ImDrawFlags -> IO ()

imGui_RenderColorRectWithAlphaCheckerboard :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImU32 -> CFloat -> ImVec2 -> CFloat -> ImDrawFlags -> IO ()
imGui_RenderColorRectWithAlphaCheckerboard draw_list p_min p_max fill_col grid_step grid_off rounding flags =
  with p_min $ \_p1 -> with p_max $ \_p2 -> with grid_off $ \_p5 -> c_imGui_RenderColorRectWithAlphaCheckerboard draw_list _p1 _p2 fill_col grid_step _p5 rounding flags

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderDragDropTargetRectEx_wrap"
  c_imGui_RenderDragDropTargetRectEx :: (Ptr ImDrawList) -> (Ptr ImRect) -> IO ()

imGui_RenderDragDropTargetRectEx :: (Ptr ImDrawList) -> ImRect -> IO ()
imGui_RenderDragDropTargetRectEx draw_list bb =
  with bb $ \_p1 -> c_imGui_RenderDragDropTargetRectEx draw_list _p1

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderDragDropTargetRectForItem_wrap"
  c_imGui_RenderDragDropTargetRectForItem :: (Ptr ImRect) -> IO ()

imGui_RenderDragDropTargetRectForItem :: ImRect -> IO ()
imGui_RenderDragDropTargetRectForItem bb =
  with bb $ \_p0 -> c_imGui_RenderDragDropTargetRectForItem _p0

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderFrame_wrap"
  c_imGui_RenderFrame :: (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> CBool -> CFloat -> IO ()

imGui_RenderFrame :: ImVec2 -> ImVec2 -> ImU32 -> CBool -> CFloat -> IO ()
imGui_RenderFrame p_min p_max fill_col borders rounding =
  with p_min $ \_p0 -> with p_max $ \_p1 -> c_imGui_RenderFrame _p0 _p1 fill_col borders rounding

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderFrameBorder_wrap"
  c_imGui_RenderFrameBorder :: (Ptr ImVec2) -> (Ptr ImVec2) -> CFloat -> IO ()

imGui_RenderFrameBorder :: ImVec2 -> ImVec2 -> CFloat -> IO ()
imGui_RenderFrameBorder p_min p_max rounding =
  with p_min $ \_p0 -> with p_max $ \_p1 -> c_imGui_RenderFrameBorder _p0 _p1 rounding

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderMouseCursor_wrap"
  c_imGui_RenderMouseCursor :: (Ptr ImVec2) -> CFloat -> ImGuiMouseCursor -> ImU32 -> ImU32 -> ImU32 -> IO ()

imGui_RenderMouseCursor :: ImVec2 -> CFloat -> ImGuiMouseCursor -> ImU32 -> ImU32 -> ImU32 -> IO ()
imGui_RenderMouseCursor pos scale mouse_cursor col_fill col_border col_shadow =
  with pos $ \_p0 -> c_imGui_RenderMouseCursor _p0 scale mouse_cursor col_fill col_border col_shadow

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderNavCursor_wrap"
  c_imGui_RenderNavCursor :: (Ptr ImRect) -> ImGuiID -> ImGuiNavRenderCursorFlags -> IO ()

imGui_RenderNavCursor :: ImRect -> ImGuiID -> ImGuiNavRenderCursorFlags -> IO ()
imGui_RenderNavCursor bb id_ flags =
  with bb $ \_p0 -> c_imGui_RenderNavCursor _p0 id_ flags

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderNavHighlight_wrap"
  c_imGui_RenderNavHighlight :: (Ptr ImRect) -> ImGuiID -> ImGuiNavRenderCursorFlags -> IO ()

imGui_RenderNavHighlight :: ImRect -> ImGuiID -> ImGuiNavRenderCursorFlags -> IO ()
imGui_RenderNavHighlight bb id_ flags =
  with bb $ \_p0 -> c_imGui_RenderNavHighlight _p0 id_ flags

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderRectFilledInRangeH_wrap"
  c_imGui_RenderRectFilledInRangeH :: (Ptr ImDrawList) -> (Ptr ImRect) -> ImU32 -> CFloat -> CFloat -> CFloat -> IO ()

imGui_RenderRectFilledInRangeH :: (Ptr ImDrawList) -> ImRect -> ImU32 -> CFloat -> CFloat -> CFloat -> IO ()
imGui_RenderRectFilledInRangeH draw_list rect col fill_x0 fill_x1 rounding =
  with rect $ \_p1 -> c_imGui_RenderRectFilledInRangeH draw_list _p1 col fill_x0 fill_x1 rounding

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderRectFilledWithHole_wrap"
  c_imGui_RenderRectFilledWithHole :: (Ptr ImDrawList) -> (Ptr ImRect) -> (Ptr ImRect) -> ImU32 -> CFloat -> IO ()

imGui_RenderRectFilledWithHole :: (Ptr ImDrawList) -> ImRect -> ImRect -> ImU32 -> CFloat -> IO ()
imGui_RenderRectFilledWithHole draw_list outer inner col rounding =
  with outer $ \_p1 -> with inner $ \_p2 -> c_imGui_RenderRectFilledWithHole draw_list _p1 _p2 col rounding

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderText_wrap"
  c_imGui_RenderText :: (Ptr ImVec2) -> CString -> CString -> CBool -> IO ()

imGui_RenderText :: ImVec2 -> CString -> CString -> CBool -> IO ()
imGui_RenderText pos text text_end hide_text_after_hash =
  with pos $ \_p0 -> c_imGui_RenderText _p0 text text_end hide_text_after_hash

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderTextClipped_wrap"
  c_imGui_RenderTextClipped :: (Ptr ImVec2) -> (Ptr ImVec2) -> CString -> CString -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImRect) -> IO ()

imGui_RenderTextClipped :: ImVec2 -> ImVec2 -> CString -> CString -> (Ptr ImVec2) -> ImVec2 -> (Ptr ImRect) -> IO ()
imGui_RenderTextClipped pos_min pos_max text text_end text_size_if_known align clip_rect =
  with pos_min $ \_p0 -> with pos_max $ \_p1 -> with align $ \_p5 -> c_imGui_RenderTextClipped _p0 _p1 text text_end text_size_if_known _p5 clip_rect

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderTextClippedWithDrawList_wrap"
  c_imGui_RenderTextClippedWithDrawList :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> CString -> CString -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImRect) -> IO ()

imGui_RenderTextClippedWithDrawList :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> CString -> CString -> (Ptr ImVec2) -> ImVec2 -> (Ptr ImRect) -> IO ()
imGui_RenderTextClippedWithDrawList draw_list pos_min pos_max text text_end text_size_if_known align clip_rect =
  with pos_min $ \_p1 -> with pos_max $ \_p2 -> with align $ \_p6 -> c_imGui_RenderTextClippedWithDrawList draw_list _p1 _p2 text text_end text_size_if_known _p6 clip_rect

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderTextEllipsis_wrap"
  c_imGui_RenderTextEllipsis :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> CFloat -> CString -> CString -> (Ptr ImVec2) -> IO ()

imGui_RenderTextEllipsis :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> CFloat -> CString -> CString -> (Ptr ImVec2) -> IO ()
imGui_RenderTextEllipsis draw_list pos_min pos_max ellipsis_max_x text text_end text_size_if_known =
  with pos_min $ \_p1 -> with pos_max $ \_p2 -> c_imGui_RenderTextEllipsis draw_list _p1 _p2 ellipsis_max_x text text_end text_size_if_known

foreign import capi unsafe "DearImGuiWrappers.h ImGui_RenderTextWrapped_wrap"
  c_imGui_RenderTextWrapped :: (Ptr ImVec2) -> CString -> CString -> CFloat -> IO ()

imGui_RenderTextWrapped :: ImVec2 -> CString -> CString -> CFloat -> IO ()
imGui_RenderTextWrapped pos text text_end wrap_width =
  with pos $ \_p0 -> c_imGui_RenderTextWrapped _p0 text text_end wrap_width

-- C: void ImGui::ScaleWindowsInViewport(ImGuiViewportP* viewport, float scale)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_ScaleWindowsInViewport"
  imGui_ScaleWindowsInViewport :: (Ptr ImGuiViewportP) -> CFloat -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_ScrollToBringRectIntoView_wrap"
  c_imGui_ScrollToBringRectIntoView :: (Ptr ImGuiWindow) -> (Ptr ImRect) -> IO ()

imGui_ScrollToBringRectIntoView :: (Ptr ImGuiWindow) -> ImRect -> IO ()
imGui_ScrollToBringRectIntoView window rect =
  with rect $ \_p1 -> c_imGui_ScrollToBringRectIntoView window _p1

-- C: void ImGui::ScrollToItem(ImGuiScrollFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_ScrollToItem"
  imGui_ScrollToItem :: ImGuiScrollFlags -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_ScrollToRect_wrap"
  c_imGui_ScrollToRect :: (Ptr ImGuiWindow) -> (Ptr ImRect) -> ImGuiScrollFlags -> IO ()

imGui_ScrollToRect :: (Ptr ImGuiWindow) -> ImRect -> ImGuiScrollFlags -> IO ()
imGui_ScrollToRect window rect flags =
  with rect $ \_p1 -> c_imGui_ScrollToRect window _p1 flags

foreign import capi unsafe "DearImGuiWrappers.h ImGui_ScrollToRectEx_wrap"
  c_imGui_ScrollToRectEx :: (Ptr ImGuiWindow) -> (Ptr ImRect) -> ImGuiScrollFlags -> (Ptr ImVec2) -> IO ()

imGui_ScrollToRectEx :: (Ptr ImGuiWindow) -> ImRect -> ImGuiScrollFlags -> IO ImVec2
imGui_ScrollToRectEx window rect flags =
  with rect $ \_p1 -> alloca $ \_pOut -> c_imGui_ScrollToRectEx window _p1 flags _pOut >> peek _pOut

-- C: void ImGui::Scrollbar(ImGuiAxis axis)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_Scrollbar"
  imGui_Scrollbar :: ImGuiAxis -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_ScrollbarEx_wrap"
  c_imGui_ScrollbarEx :: (Ptr ImRect) -> ImGuiID -> ImGuiAxis -> (Ptr ImS64) -> ImS64 -> ImS64 -> ImDrawFlags -> IO CBool

imGui_ScrollbarEx :: ImRect -> ImGuiID -> ImGuiAxis -> (Ptr ImS64) -> ImS64 -> ImS64 -> ImDrawFlags -> IO CBool
imGui_ScrollbarEx bb id_ axis p_scroll_v avail_v contents_v draw_rounding_flags =
  with bb $ \_p0 -> c_imGui_ScrollbarEx _p0 id_ axis p_scroll_v avail_v contents_v draw_rounding_flags
